--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "scripts": {
     "lint": "eslint ./src/**/*.ts ./test/**/*.ts --fix",
-    "build": "tsc ./src",
     "test": "jest --forceExit",
     "start:dev": "nodemon --watch './src/**' --ext 'ts,json' --exec 'ts-node ./src/index.ts'"
   },
@@ -28,6 +27,7 @@
     "@jest/globals": "^29.6.4",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.7",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "eslint": "^8.48.0",
